<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/list_background"
	>
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="vertical" 
		android:layout_gravity="center"
		android:gravity="center_horizontal"
		android:background="@drawable/list_background">	
		<ImageView
			android:id="@+id/logoImage"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:background="@drawable/icon_new_account_logo"
			/>
		<cn.code.notes.share.MaxWidthLinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/round_conners_shape"
			>
			<EditText
				android:id="@+id/editTextUserID"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:hint="@string/user_id"
				android:layout_margin="5dp"
				android:background="@drawable/round_conners_shape"
				android:inputType="textEmailAddress"/>
		</cn.code.notes.share.MaxWidthLinearLayout>
		<cn.code.notes.share.MaxWidthLinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/round_conners_shape"
			>
			<EditText
				android:id="@+id/firstAccountForPassword"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:hint="@string/password"
				android:password="true"
				android:layout_margin="5dp"
				android:background="@drawable/round_conners_shape"
				/>
		</cn.code.notes.share.MaxWidthLinearLayout>
		<cn.code.notes.share.MaxWidthLinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/round_conners_shape"
			>
			<EditText
				android:id="@+id/editTextConfirmPassword"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:hint="@string/password_2"
				android:password="true"
				android:layout_margin="5dp"
				android:background="@drawable/round_conners_shape"
				/>
		</cn.code.notes.share.MaxWidthLinearLayout>
		<Button
			android:id="@+id/loginButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/account_with_login"
			android:background="@drawable/icon_login"
			/>
	</LinearLayout>
</ScrollView>