<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent_background"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_login_account_shape"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <include layout="@layout/activity_account_head" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dip"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_login_activity_linearlayout_shape"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/userId"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/message_enter_user_id"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="7dip"
                        android:paddingLeft="5dip"
                        android:paddingTop="7dip"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/darkgray" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/message_enter_password"
                        android:paddingBottom="7dip"
                        android:paddingLeft="5dip"
                        android:paddingTop="7dip"
                        android:password="true"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/darkgray" />

                    <EditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/message_enter_confirm_password"
                        android:paddingBottom="7dip"
                        android:paddingLeft="5dip"
                        android:paddingTop="7dip"
                        android:password="true"
                        android:singleLine="true" />
                </LinearLayout>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dip"
                    android:background="@drawable/submit_button_backgroud"
                    android:padding="5dip"
                    android:text="@string/account_with_cerate"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>